--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/json": "^2.1.128",
     "@vueuse/core": "^9.3.0",
     "ni": "^0.0.2",
+    "smooth-scroll-into-view-if-needed": "^1.1.33",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
