--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "private": true,
   "packageManager": "pnpm@7.12.0",
   "scripts": {
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "dev": "vite --port 3333 --open",
-    "lint": "eslint .",
-    "typecheck": "vue-tsc --noEmit",
-    "preview": "vite preview",
-    "test": "vitest",
-    "up": "taze major -I"
+    "serve": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@iconify/json": "^2.1.128",
